--- a/portfolio.html
+++ b/portfolio.html
@@ -16,24 +16,24 @@
 
 <body>
   <header class="header">
-    <div class="container header-container">
-      <nav class="header-navigation">
-        <a lang="en" class="link header-web-logo" href="./index.html">Web<span
-            class="header-Studio-logo">Studio</span></a>
-        <ul class="list header-list">
-          <li class="header-item"><a class="link header-link" href="./index.html">Студия</a></li>
-          <li class="header-item"><a class="link header-link current" href="./portfolio.html">Портфолио</a></li>
-          <li class="header-item"><a class="link header-link" href="">Контакты</a></li>
+    <div class="container header__container">
+      <nav class="header__navigation">
+        <a lang="en" class="link header__web-logo" href="./index.html">Web<span
+            class="header__Studio-logo">Studio</span></a>
+        <ul class="list header__list">
+          <li class="header__item"><a class="link header__link" href="./index.html">Студия</a></li>
+          <li class="header__item"><a class="link header__link current" href="./portfolio.html">Портфолио</a></li>
+          <li class="header__item"><a class="link header__link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="header-connect-list list">
-        <li class="header-connect-item"><a class="header-mailto link" href="mailto:info@devstudio.com">
-            <svg class="header-connect-icon-mailto" width="16" height="12">
+      <ul class="header__connect-list list">
+        <li class="header__connect-item"><a class="header__mailto link" href="mailto:info@devstudio.com">
+            <svg class="header__connect-icon__mailto" width="16" height="12">
               <use href="./image/icons.svg#icon-mail"></use>
             </svg>info@devstudio.com</a>
         </li>
-        <li class="header-connect-item"><a class="header-tel-link link" href="tel:+380961111111">
-            <svg class="header-connect-icon-tel" width="10" height="16">
+        <li class="header__connect-item"><a class="header__tel-link link" href="tel:+380961111111">
+            <svg class="header__connect-icon__tel" width="10" height="16">
               <use href="./image/icons.svg#icon-tel"></use>
             </svg>+38 096 111 11 11</a>
         </li>
@@ -179,73 +179,73 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="container footer-container">
-      <div class="footer-container-address">
-        <a lang="en" class="link footer-web-logo" href="./index.html">Web<span
-            class="footer-Studio-logo">Studio</span></a>
-        <address class="footer-address">
-          <ul class="footer-list list">
-            <li class="footer-item">
-              <a class="footer-link link" href="https://goo.gl/maps/U1iyjjEfAbTLzfu76" target="_blank"
-                rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26
-              </a>
-            </li>
-            <li class="footer-item"><a class="footer-mailto link"
-                href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="footer-item"><a class="footer-tel link" href="tel:+380961111111">+38 096 111 11
-                11</a>
-            </li>
-          </ul>
-        </address>
-      </div>
-      <div class="footer-container-link">
-        <h3 class="footer-container-link-title">ПРИСОЕДИНЯЙТЕСЬ</h3>
-        <ul class="footer-social-list list">
-          <li class="footer-social-item">
-            <a href="" class="footer-social-link link">
-              <svg class="footer-social-icon" width="20" height="20">
-                <use href="./image/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a href="" class="footer-social-link link">
-              <svg class="footer-social-icon" width="20" height="20">
-                <use href="./image/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a href="" class="footer-social-link link">
-              <svg class="footer-social-icon" width="20" height="20">
-                <use href="./image/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a href="" class="footer-social-link link">
-              <svg class="footer-social-icon" width="20" height="20">
-                <use href="./image/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="footer-container-subscription">
-        <h3 class="footer-subscription-title">Подпишитесь на рассылку</h3>
-        <form action="#" class="footer-subscription">
+    <div class="container footer__container">
+        <div class="footer__container-address">
+            <a lang="en" class="link footer__web-logo" href="./index.html">Web<span
+                    class="footer__Studio-logo">Studio</span></a>
+            <address class="footer__address">
+                <ul class="footer__list list">
+                    <li class="footer__item">
+                        <a class="footer__link link" href="https://goo.gl/maps/U1iyjjEfAbTLzfu76" target="_blank"
+                            rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26
+                        </a>
+                    </li>
+                    <li class="footer__item"><a class="footer__mailto link"
+                            href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="footer__item"><a class="footer__tel link" href="tel:+380961111111">+38 096 111 11
+                            11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
+        <div class="footer__container-link">
+            <h3 class="footer__container-link__title">ПРИСОЕДИНЯЙТЕСЬ</h3>
+            <ul class="footer__social-list list">
+                <li class="footer__social-item">
+                    <a href="" class="footer__social-link link">
+                        <svg class="footer__social-icon" width="20" height="20">
+                            <use href="./image/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer__social-item">
+                    <a href="" class="footer__social-link link">
+                        <svg class="footer__social-icon" width="20" height="20">
+                            <use href="./image/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer__social-item">
+                    <a href="" class="footer__social-link link">
+                        <svg class="footer__social-icon" width="20" height="20">
+                            <use href="./image/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer__social-item">
+                    <a href="" class="footer__social-link link">
+                        <svg class="footer__social-icon" width="20" height="20">
+                            <use href="./image/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer__container-subscription">
+            <h3 class="footer__subscription-title">Подпишитесь на рассылку</h3>
+            <form action="#" class="footer__subscription">
 
-          <input type="email" name="name" class="footer-subscription-text" placeholder="E-mail" required />
-          <button type="submit" class="subscription-btn">Подписаться<svg class="subscription-icon" width="24"
-              height="24">
-              <use href="./image/icons.svg#icon-telegram"></use>
-            </svg>
-          </button>
+                <input type="email" name="name" class="footer__subscription-text" placeholder="E-mail" required />
+                <button type="submit" class="footer__subscription-btn">Подписаться<svg class="footer__subscription-icon" width="24"
+                        height="24">
+                        <use href="./image/icons.svg#icon-telegram"></use>
+                    </svg>
+                </button>
 
-        </form>
-      </div>
+            </form>
+        </div>
     </div>
-  </footer>
+</footer>
 </body>
 
 </html>
